Add fee information input form

--- a/ParkingChargeCalculator/ParkingChargeCalculator.csproj
+++ b/ParkingChargeCalculator/ParkingChargeCalculator.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FeeSetFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FeeSetFrm.Designer.cs">
+      <DependentUpon>FeeSetFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FeeSetFrm.resx">
+      <DependentUpon>FeeSetFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainFrm.resx">
       <DependentUpon>MainFrm.cs</DependentUpon>
     </EmbeddedResource>
