Update simple carlulate

--- a/ParkingChargeCalculator/App.config
+++ b/ParkingChargeCalculator/App.config
@@ -22,6 +22,9 @@
             <setting name="addUnitCharge" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="freeUsingTime" serializeAs="String">
+                <value>0</value>
+            </setting>
         </ParkingChargeCalculator.Properties.Settings>
     </userSettings>
 </configuration>
